--- a/natours-project/sass/main.scss
+++ b/natours-project/sass/main.scss
@@ -11,12 +11,7 @@
 
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box";
 
-@import"layout/grid";
+@import "layout/grid";
 @import "layout/header";
-
-
-
-
-
-
