--- a/natours-project/sass/abstracts/_variables.scss
+++ b/natours-project/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 $color-gray-dark: #777;
 $color-gray-dark-2: #999;
+$color-gray-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
