--- a/natours-project/sass/base/_base.scss
+++ b/natours-project/sass/base/_base.scss
@@ -1,4 +1,3 @@
-
 *,
 *::after,
 *::before {
@@ -8,10 +7,25 @@
 }
 
 html {
-    // defines what one rem is
-  font-size: 62.5%;
+  // defines what one rem is
+  font-size: 62.5%; // 1rem equals 10 pixels
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1 rem = 12px ----- 12 / 16 = 75%
+  }
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1 rem = 9px ---- 9 / 16 = 56.5%
+  }
+  @include respond(tab-port) {
+    font-size: 50%; // 1 rem equals 8 pixels ----- 8 / 16 = 50%
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
