--- a/natours-project/sass/layout/_header.scss
+++ b/natours-project/sass/layout/_header.scss
@@ -11,7 +11,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   }
 
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     // comma is like an "or"
     background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../img/hero.jpg);
   }
